Именованные аргументы [#295518]